# GeoAlgLib

./: README.md  package.cabal
src/: AdaptTriangulation.lhs  Assocs.lhs  ChansConvexHull.lhs  Circle.lhs  ConvexTriangulation.lhs  Delaunay.lhs  DelaunayDAG.lhs  Divide.lhs  EventStructureSpec.lhs  GareysTriangulation.lhs  GrahamsScan.lhs  JarvisMarch.lhs  KDTree.lhs  KETTriangulation.hs  KETTriangulation.lhs  KirkpatrickSeidelHull.lhs  Line.lhs  MergeHull.lhs  MergeTriangulation.lhs  MetaPost.lhs  MonotonePartition.hs  MonotonePartition.lhs  MonotoneTriangulation.lhs  NaiveTriangulation.lhs  Pertub.lhs  Point.lhs  Point1.lhs  Point2.lhs  Point3.lhs  Point4.lhs  PointClass.lhs  PointN.lhs  Polar.hs  Polar.lhs  Polygon.lhs  QEDS.lhs  QEDSbasics.lhs  QEDSstatic.lhs  RBox.hs  RBox.lhs  (+7 more)
src/Applications/: AllNearest.lhs  ClosestPair.lhs  DelaunayHull.lhs  MaxEmptyCircle.lhs  NearestPoint.lhs  OnionLayers.lhs
src/Basics/: DoubleEps.lhs  DynamicArray.lhs  FiniteMap.hs  FiniteMap.lhs  FiniteMapOld.lhs  ListCat.lhs  OrderStat.lhs  Pretty.lhs  QSort.lhs  Random.hs  Random.lhs  STUtils.lhs  Sort.lhs  Sorting.lhs  Topped.lhs  Utilities.lhs
src/OpenGL/: GL_ConvexHulls.lhs
src/Tests/: ConvexHulls.hs  ConvexHulls.lhs  Nearest.hs  Nearest.lhs  Polys.hs  Polys.lhs  RangeQueries.hs  RangeQueries.lhs  Test.hs  Test.lhs  Triangulations.hs  Triangulations.lhs  VoronoiDelaunay.lhs
